...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout">

        <TextView
            android:id="@+id/btn_albums"
            android:layout_width="wrap_content"
            android:minWidth="240dp"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:layout_marginBottom="20dp"
            android:text="@string/albums"
...
