...
            android:textColor="@color/black"
            android:gravity="center"
            android:contentDescription="Albums page title" />

        <!-- Add button -->
        <ImageView
            android:id="@+id/add_album_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/add_circle"
            android:contentDescription="@string/add_album"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="4dp" />
...
